plugins {
    id 'java'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
}

dependencies {
    implementation 'javax.json:javax.json-api:1.1.4'
    implementation 'com.google.guava:guava:30.1-jre'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
    implementation 'org.glassfish:jakarta.json:1.1.6'
    implementation 'com.google.protobuf:protobuf-java-util:3.19.1'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.1'
    testImplementation 'org.assertj:assertj-core:3.21.0'
    testImplementation 'org.mockito:mockito-core:4.1.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.1.0'
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

tasks.withType(JavaCompile) {
    options.with {
        encoding = 'UTF-8'
    }
}